# RAGnition

./: .gitignore  pyproject.toml
0-DataIngestParsing/: 1-DataIngestion.ipynb  2-Dataparsingpdf.ipynb
0-DataIngestParsing/data/txt_files/: Antino_Intro.txt
